--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,7 @@
 {
   "version": 2,
   "routes": [
-    {
-      "src": "/Chaitanya_khairnar.pdf",
-      "dest": "/Chaitanya_khairnar.pdf"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index5.html"
-    }
+    { "src": "/Chaitanya_Khairnar.pdf", "dest": "/Chaitanya_Khairnar.pdf" },
+    { "src": "/(.*)", "dest": "/index5.html" }
   ]
 }
-
